--- a/aboutBlinky.html
+++ b/aboutBlinky.html
@@ -36,19 +36,19 @@
                                 </a>
                             </li>
                             <li class="nav__submenu-item">
-                                <a href="./pinkyAbout.html">
+                                <a href="aboutPinky.html">
                                     <img src="./src/images/PinkyGhost.png" alt="">
                                     <span>Pinky(Пинки)</span>
                                 </a>
                             </li>
                             <li class="nav__submenu-item">
-                                <a href="./inkyAbout.html">
+                                <a href="aboutInky.html">
                                     <img src="./src/images/BlueGhost.png" alt="">
                                     <span>Inky(Инки)</span>
                                 </a>
                             </li>
                             <li class="nav__submenu-item">
-                                <a href="./clydeAbout.html">
+                                <a href="aboutClyde.html">
                                     <img src="./src/images/OrangeGhost.png" alt="">
                                     <span>Clyde(Клайд)</span>
                                 </a>
