--- a/aboutClyde.html
+++ b/aboutClyde.html
@@ -36,19 +36,19 @@
                                 </a>
                             </li>
                             <li class="nav__submenu-item">
-                                <a href="./pinkyAbout.html">
+                                <a href="aboutPinky.html">
                                     <img src="./src/images/PinkyGhost.png" alt="">
                                     <span>Pinky(Пинки)</span>
                                 </a>
                             </li>
                             <li class="nav__submenu-item">
-                                <a href="./inkyAbout.html">
+                                <a href="aboutInky.html">
                                     <img src="./src/images/BlueGhost.png" alt="">
                                     <span>Inky(Инки)</span>
                                 </a>
                             </li>
                             <li class="nav__submenu-item">
-                                <a href="./clydeAbout.html">
+                                <a href="./aboutClyde.html">
                                     <img src="./src/images/OrangeGhost.png" alt="">
                                     <span>Clyde(Клайд)</span>
                                 </a>
@@ -72,9 +72,9 @@
 <main class="main">
     <div class="container main__container">
         <div class="about">
-            <img class="about__img" src="./src/images/BlueGhost.png" alt="blue-ghost">
-            <h2 class="about__title">Инки (Inky) — голубое привидение.</h2>
-            <p class="about__text">Оригинальное японское название «Кимагурэ» (яп. 気まぐれ, «капризный»). Пугает Пакмана, заставляя делать неправильный ход.</p>
+            <img class="about__img" src="./src/images/OrangeGhost.png" alt="orange-ghost">
+            <h2 class="about__title">Клайд (Clyde) — оранжевое привидение.</h2>
+            <p class="about__text">Оригинальное японское название «Отобокэ» (яп. お惚け, «притворяющийся дураком»). Не очень умён.</p>
         </div>
     </div>
 </main>
