add favicon and link to next ghost

--- a/aboutBlinky.html
+++ b/aboutBlinky.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./src/images/RedGhost.png" type="image/png">
     <title>Blinky</title>
 </head>
 <body class="page">
@@ -75,6 +76,9 @@
             <img class="about__img" src="./src/images/RedGhost.png" alt="red-ghost">
             <h2 class="about__title">Блинки (Blinky) — красное привидение.</h2>
             <p class="about__text">Оригинальное японское название «Оикакэ» (яп. 追いかけ, «преследователь»). Беспрестанно гонится за Пакманом.</p>
+            <a class="about__link" href="./aboutPinky.html">
+                Pinky <span>&#8594</span>
+            </a>
         </div>
     </div>
 </main>
