--- a/aboutClyde.html
+++ b/aboutClyde.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./src/images/OrangeGhost.png" type="image/png">
     <title>Clyde</title>
 </head>
 <body class="page">
@@ -75,6 +76,9 @@
             <img class="about__img" src="./src/images/OrangeGhost.png" alt="orange-ghost">
             <h2 class="about__title">Клайд (Clyde) — оранжевое привидение.</h2>
             <p class="about__text">Оригинальное японское название «Отобокэ» (яп. お惚け, «притворяющийся дураком»). Не очень умён.</p>
+            <a class="about__link" href="./aboutBlinky.html">
+                Blinky <span>&#8594</span>
+            </a>
         </div>
     </div>
 </main>
