--- a/aboutInky.html
+++ b/aboutInky.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./src/images/BlueGhost.png" type="image/png">
     <title>Inky</title>
 </head>
 <body class="page">
@@ -75,6 +76,9 @@
             <img class="about__img" src="./src/images/BlueGhost.png" alt="blue-ghost">
             <h2 class="about__title">Инки (Inky) — голубое привидение.</h2>
             <p class="about__text">Оригинальное японское название «Кимагурэ» (яп. 気まぐれ, «капризный»). Пугает Пакмана, заставляя делать неправильный ход.</p>
+            <a class="about__link" href="./aboutClyde.html">
+                Clyde <span>&#8594</span>
+            </a>
         </div>
     </div>
 </main>
