--- a/aboutPinky.html
+++ b/aboutPinky.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./src/images/PinkyGhost.png" type="image/png">
     <title>Pinky</title>
 </head>
 <body class="page">
@@ -75,6 +76,9 @@
             <img class="about__img" src="./src/images/PinkyGhost.png" alt="pinky-ghost">
             <h2 class="about__title">Пинки (Pinky) — розовое привидение.</h2>
             <p class="about__text">Оригинальное японское название «Матибусэ» (яп. 待ち伏せ, «сидящий в засаде»). Строит стратегические засады.</p>
+            <a class="about__link" href="./aboutInky.html">
+                Inky <span>&#8594</span>
+            </a>
         </div>
     </div>
 </main>
